Compilation/AnalyseSyntaxique/Exercice1/ANTLRPPParser.java
// Generated from ANTLRPP.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ANTLRPPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, Integer=31, 
		Bool=32, Number=33, Alphabet=34, WS=35;
	public static final int
		RULE_binExpr = 0, RULE_atomExpr = 1, RULE_insExpr = 2, RULE_func = 3, 
		RULE_calleeExpr = 4, RULE_type = 5, RULE_array = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"binExpr", "atomExpr", "insExpr", "func", "calleeExpr", "type", "array"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'AND'", "'OR'", "'<'", "'<='", "'='", 
			"'!='", "'>='", "'>'", "'not'", "'true'", "'false'", "'('", "')'", "'['", 
			"']'", "'new array of'", "':='", "'if'", "'then'", "'else'", "'a..z'", 
			"'A..Z'", "'0..9'", "'read'", "'write'", "'array of'", "'integer'", "'boolean'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "Integer", "Bool", "Number", 
			"Alphabet", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ANTLRPP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ANTLRPPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class BinExprContext extends ParserRuleContext {
		public PPBinOp value;
		public AtomExprContext e1;
		public AtomExprContext e2;
		public AtomExprContext e3;
		public AtomExprContext e4;
		public AtomExprContext e5;
		public AtomExprContext e6;
		public AtomExprContext e7;
		public AtomExprContext e8;
		public AtomExprContext e9;
		public AtomExprContext e10;
		public AtomExprContext e11;
		public AtomExprContext e12;
		public AtomExprContext e13;
		public AtomExprContext e14;
		public AtomExprContext e15;
		public AtomExprContext e16;
		public AtomExprContext e17;
		public AtomExprContext e18;
		public AtomExprContext e19;
		public AtomExprContext e20;
		public AtomExprContext e21;
		public AtomExprContext e22;
		public AtomExprContext e23;
		public AtomExprContext e24;
		public List<AtomExprContext> atomExpr() {
			return getRuleContexts(AtomExprContext.class);
		}
		public AtomExprContext atomExpr(int i) {
			return getRuleContext(AtomExprContext.class,i);
		}
		public BinExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).enterBinExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).exitBinExpr(this);
		}
	}

	public final BinExprContext binExpr() throws RecognitionException {
		BinExprContext _localctx = new BinExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_binExpr);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(14);
				((BinExprContext)_localctx).e1 = atomExpr();
				setState(15);
				match(T__0);
				setState(16);
				((BinExprContext)_localctx).e2 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPAdd(((BinExprContext)_localctx).e1.value, ((BinExprContext)_localctx).e2.value); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(19);
				((BinExprContext)_localctx).e3 = atomExpr();
				setState(20);
				match(T__1);
				setState(21);
				((BinExprContext)_localctx).e4 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPSub(((BinExprContext)_localctx).e3.value, ((BinExprContext)_localctx).e4.value); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(24);
				((BinExprContext)_localctx).e5 = atomExpr();
				setState(25);
				match(T__2);
				setState(26);
				((BinExprContext)_localctx).e6 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPMul(((BinExprContext)_localctx).e5.value, ((BinExprContext)_localctx).e6.value); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(29);
				((BinExprContext)_localctx).e7 = atomExpr();
				setState(30);
				match(T__3);
				setState(31);
				((BinExprContext)_localctx).e8 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPDiv(((BinExprContext)_localctx).e7.value, ((BinExprContext)_localctx).e8.value); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(34);
				((BinExprContext)_localctx).e9 = atomExpr();
				setState(35);
				match(T__4);
				setState(36);
				((BinExprContext)_localctx).e10 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPAnd(((BinExprContext)_localctx).e9.value, ((BinExprContext)_localctx).e10.value); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(39);
				((BinExprContext)_localctx).e11 = atomExpr();
				setState(40);
				match(T__5);
				setState(41);
				((BinExprContext)_localctx).e12 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPOr(((BinExprContext)_localctx).e11.value, ((BinExprContext)_localctx).e12.value); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(44);
				((BinExprContext)_localctx).e13 = atomExpr();
				setState(45);
				match(T__6);
				setState(46);
				((BinExprContext)_localctx).e14 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPLt(((BinExprContext)_localctx).e13.value, ((BinExprContext)_localctx).e14.value); 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(49);
				((BinExprContext)_localctx).e15 = atomExpr();
				setState(50);
				match(T__7);
				setState(51);
				((BinExprContext)_localctx).e16 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPLe(((BinExprContext)_localctx).e15.value, ((BinExprContext)_localctx).e16.value); 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(54);
				((BinExprContext)_localctx).e17 = atomExpr();
				setState(55);
				match(T__8);
				setState(56);
				((BinExprContext)_localctx).e18 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPEq(((BinExprContext)_localctx).e17.value, ((BinExprContext)_localctx).e18.value); 
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(59);
				((BinExprContext)_localctx).e19 = atomExpr();
				setState(60);
				match(T__9);
				setState(61);
				((BinExprContext)_localctx).e20 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPNe(((BinExprContext)_localctx).e19.value, ((BinExprContext)_localctx).e20.value); 
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(64);
				((BinExprContext)_localctx).e21 = atomExpr();
				setState(65);
				match(T__10);
				setState(66);
				((BinExprContext)_localctx).e22 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPGe(((BinExprContext)_localctx).e21.value, ((BinExprContext)_localctx).e22.value); 
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(69);
				((BinExprContext)_localctx).e23 = atomExpr();
				setState(70);
				match(T__11);
				setState(71);
				((BinExprContext)_localctx).e24 = atomExpr();
				 ((BinExprContext)_localctx).value =  new PPGt(((BinExprContext)_localctx).e23.value, ((BinExprContext)_localctx).e24.value); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomExprContext extends ParserRuleContext {
		public PPExpr value;
		public Token c;
		public Token e1;
		public AtomExprContext e2;
		public AtomExprContext e3;
		public CalleeExprContext e4;
		public AtomExprContext e5;
		public ArrayContext e6;
		public Token e7;
		public TypeContext e8;
		public Token e9;
		public TerminalNode Number() { return getToken(ANTLRPPParser.Number, 0); }
		public TerminalNode Alphabet() { return getToken(ANTLRPPParser.Alphabet, 0); }
		public List<AtomExprContext> atomExpr() {
			return getRuleContexts(AtomExprContext.class);
		}
		public AtomExprContext atomExpr(int i) {
			return getRuleContext(AtomExprContext.class,i);
		}
		public CalleeExprContext calleeExpr() {
			return getRuleContext(CalleeExprContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public AtomExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).enterAtomExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).exitAtomExpr(this);
		}
	}

	public final AtomExprContext atomExpr() throws RecognitionException {
		AtomExprContext _localctx = new AtomExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_atomExpr);
		int _la;
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Number:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				((AtomExprContext)_localctx).c = match(Number);
				 ((AtomExprContext)_localctx).value =  new PPCte(Integer.parseInt((((AtomExprContext)_localctx).c!=null?((AtomExprContext)_localctx).c.getText():null))); 
				}
				break;
			case Alphabet:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				((AtomExprContext)_localctx).e1 = match(Alphabet);
				 ((AtomExprContext)_localctx).value =  new PPVar((((AtomExprContext)_localctx).e1!=null?((AtomExprContext)_localctx).e1.getText():null)); 
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				match(T__1);
				setState(81);
				((AtomExprContext)_localctx).e2 = atomExpr();
				 ((AtomExprContext)_localctx).value =  new PPInv(((AtomExprContext)_localctx).e2.value); 
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				match(T__12);
				setState(85);
				((AtomExprContext)_localctx).e3 = atomExpr();
				 ((AtomExprContext)_localctx).value =  new PPNot(((AtomExprContext)_localctx).e3.value); 
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5);
				{
				setState(88);
				match(T__13);
				 ((AtomExprContext)_localctx).value =  new PPTrue(); 
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				match(T__14);
				 ((AtomExprContext)_localctx).value =  new PPFalse(); 
				}
				break;
			case T__24:
			case T__27:
			case T__28:
				enterOuterAlt(_localctx, 7);
				{
				setState(92);
				((AtomExprContext)_localctx).e4 = calleeExpr();
				setState(93);
				match(T__15);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__19) | (1L << T__24) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << Number) | (1L << Alphabet))) != 0)) {
					{
					{
					setState(94);
					((AtomExprContext)_localctx).e5 = atomExpr();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				match(T__16);
				 ((AtomExprContext)_localctx).value =  new PPFunCall(((AtomExprContext)_localctx).e4.value, new ArrayList<>() ); 
				}
				break;
			case T__29:
				enterOuterAlt(_localctx, 8);
				{
				setState(103);
				((AtomExprContext)_localctx).e6 = array();
				setState(104);
				match(T__17);
				setState(105);
				((AtomExprContext)_localctx).e7 = match(Number);
				setState(106);
				match(T__18);
				 ((AtomExprContext)_localctx).value =  new PPArrayGet((((AtomExprContext)_localctx).e6!=null?_input.getText(((AtomExprContext)_localctx).e6.start,((AtomExprContext)_localctx).e6.stop):null), Integer.parseInt((((AtomExprContext)_localctx).e7!=null?((AtomExprContext)_localctx).e7.getText():null))); 
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 9);
				{
				setState(109);
				match(T__19);
				setState(110);
				((AtomExprContext)_localctx).e8 = type();
				setState(111);
				match(T__17);
				setState(112);
				((AtomExprContext)_localctx).e9 = match(Number);
				setState(113);
				match(T__18);
				 ((AtomExprContext)_localctx).value =  new PPArrayAlloc((((AtomExprContext)_localctx).e8!=null?_input.getText(((AtomExprContext)_localctx).e8.start,((AtomExprContext)_localctx).e8.stop):null), Integer.parseInt((((AtomExprContext)_localctx).e9!=null?((AtomExprContext)_localctx).e9.getText():null))); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsExprContext extends ParserRuleContext {
		public PPInst value;
		public Token e1;
		public TypeContext e2;
		public Token e3;
		public Token e4;
		public TypeContext e5;
		public AtomExprContext e6;
		public InsExprContext e7;
		public InsExprContext e8;
		public TerminalNode Alphabet() { return getToken(ANTLRPPParser.Alphabet, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Number() { return getToken(ANTLRPPParser.Number, 0); }
		public AtomExprContext atomExpr() {
			return getRuleContext(AtomExprContext.class,0);
		}
		public List<InsExprContext> insExpr() {
			return getRuleContexts(InsExprContext.class);
		}
		public InsExprContext insExpr(int i) {
			return getRuleContext(InsExprContext.class,i);
		}
		public InsExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).enterInsExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).exitInsExpr(this);
		}
	}

	public final InsExprContext insExpr() throws RecognitionException {
		InsExprContext _localctx = new InsExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_insExpr);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				((InsExprContext)_localctx).e1 = match(Alphabet);
				setState(119);
				match(T__20);
				setState(120);
				((InsExprContext)_localctx).e2 = type();
				 ((InsExprContext)_localctx).value =  new PPAssign((((InsExprContext)_localctx).e1!=null?((InsExprContext)_localctx).e1.getText():null), (((InsExprContext)_localctx).e2!=null?_input.getText(((InsExprContext)_localctx).e2.start,((InsExprContext)_localctx).e2.stop):null)); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				((InsExprContext)_localctx).e3 = match(Alphabet);
				setState(124);
				match(T__17);
				setState(125);
				((InsExprContext)_localctx).e4 = match(Number);
				setState(126);
				match(T__18);
				setState(127);
				match(T__20);
				setState(128);
				((InsExprContext)_localctx).e5 = type();
				 ((InsExprContext)_localctx).value =  new PPAPPArraySet((((InsExprContext)_localctx).e3!=null?((InsExprContext)_localctx).e3.getText():null), (((InsExprContext)_localctx).e4!=null?((InsExprContext)_localctx).e4.getText():null), (((InsExprContext)_localctx).e5!=null?_input.getText(((InsExprContext)_localctx).e5.start,((InsExprContext)_localctx).e5.stop):null)); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				match(T__21);
				setState(132);
				((InsExprContext)_localctx).e6 = atomExpr();
				setState(133);
				match(T__22);
				setState(134);
				((InsExprContext)_localctx).e7 = insExpr();
				setState(135);
				match(T__23);
				setState(136);
				((InsExprContext)_localctx).e8 = insExpr();
				 ((InsExprContext)_localctx).value =  new PPCond((((InsExprContext)_localctx).e6!=null?_input.getText(((InsExprContext)_localctx).e6.start,((InsExprContext)_localctx).e6.stop):null), (((InsExprContext)_localctx).e7!=null?_input.getText(((InsExprContext)_localctx).e7.start,((InsExprContext)_localctx).e7.stop):null), (((InsExprContext)_localctx).e8!=null?_input.getText(((InsExprContext)_localctx).e8.start,((InsExprContext)_localctx).e8.stop):null)); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).exitFunc(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(141);
			match(T__24);
			setState(142);
			match(T__25);
			}
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__24) {
				{
				{
				setState(144);
				match(T__24);
				setState(145);
				match(T__25);
				setState(146);
				match(T__26);
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CalleeExprContext extends ParserRuleContext {
		public Callee value;
		public FuncContext x;
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public CalleeExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calleeExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).enterCalleeExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).exitCalleeExpr(this);
		}
	}

	public final CalleeExprContext calleeExpr() throws RecognitionException {
		CalleeExprContext _localctx = new CalleeExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_calleeExpr);
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__27:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				match(T__27);
				 ((CalleeExprContext)_localctx).value =  new Read(); 
				}
				break;
			case T__28:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				match(T__28);
				 ((CalleeExprContext)_localctx).value =  new Write(); 
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 3);
				{
				setState(156);
				((CalleeExprContext)_localctx).x = func();
				 ((CalleeExprContext)_localctx).value =  new User((((CalleeExprContext)_localctx).x!=null?_input.getText(((CalleeExprContext)_localctx).x.start,((CalleeExprContext)_localctx).x.stop):null)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode Integer() { return getToken(ANTLRPPParser.Integer, 0); }
		public TerminalNode Bool() { return getToken(ANTLRPPParser.Bool, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Integer:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				match(Integer);
				}
				break;
			case Bool:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				match(Bool);
				}
				break;
			case T__29:
				enterOuterAlt(_localctx, 3);
				{
				setState(163);
				array();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRPPListener ) ((ANTLRPPListener)listener).exitArray(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_array);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(T__29);
			setState(167);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}